syntax = "proto3";
package celestia.mint.v1;

option go_package = "github.com/celestiaorg/celestia-app/x/mint/types";

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/timestamp.proto";

// Minter represents the mint state.
message Minter {
  // InflationRate is the rate at which new tokens should be minted for the
  // current year. For example if InflationRate=0.1, then 10% of the total
  // supply will be minted over the course of the year.
  string inflation_rate = 1 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];
  // AnnualProvisions is the total number of tokens to be minted in the current
  // year due to inflation.
  string annual_provisions = 2 [
    (cosmos_proto.scalar)  = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable)   = false
  ];

  // PreviousBlockTime is the timestamp of the previous block.
  google.protobuf.Timestamp previous_block_time = 4 [(gogoproto.stdtime) = true];

  // BondDenom is the denomination of the token that should be minted.
  string bond_denom = 5;
}

// GenesisTime contains the timestamp of the genesis block.
message GenesisTime {
  // GenesisTime is the timestamp of the genesis block.
  google.protobuf.Timestamp genesis_time = 1 [(gogoproto.stdtime) = true];
}
